--- a/src/styles/ui.scss
+++ b/src/styles/ui.scss
@@ -12,5 +12,16 @@
   .el-dialog {
     border-radius: 15px;
   }
+}
 
+.fu-list-tabs__item {
+  .el-tabs__nav {
+    width: 100%;
+    display: flex;
+  }
+
+  .el-tabs__item {
+    flex: 1;
+    text-align: center;
+  }
 }
