<心乱飞>fix：优化进度条组件

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,10 +13,10 @@ body,
   height: 100%;
 }
 
-svg {
-  width: 1em;
-  height: 1em;
-}
+//svg {
+//  width: 1em;
+//  height: 1em;
+//}
 
 /* 整体滚动条样式 */
 ::-webkit-scrollbar {
